force-app/main/default/objects/TriggerSettings__c/TriggerSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description
  >Define a hierarchical custom setting (TriggerSettings__c) and create a CheckBox field per Trigger to turn the trigger off/on.</description>
    <label>TriggerSettings</label>
</CustomObject>