force-app/main/default/objects/TriggerSettings__c/fields/BrewerRegistrationTrigger__c.field-meta.xml
<CustomField>
    <fullName>BrewerRegistrationTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BrewerRegistrationTrigger</label>
    <type>Checkbox</type>
</CustomField>