force-app/main/default/objects/TriggerSettings__c/fields/CampaignMemberTrigger__c.field-meta.xml
<CustomField>
    <fullName>CampaignMemberTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CampaignMemberTrigger</label>
    <type>Checkbox</type>
</CustomField>