force-app/main/default/objects/TriggerSettings__c/fields/IndividualEmailResultTrigger__c.field-meta.xml
<CustomField>
    <fullName>IndividualEmailResultTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>IndividualEmailResultTrigger</label>
    <type>Checkbox</type>
</CustomField>