force-app/main/default/objects/TriggerSettings__c/fields/LoyaltyTransactionTrigger__c.field-meta.xml
<CustomField>
    <fullName>LoyaltyTransactionTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LoyaltyTransactionTrigger</label>
    <type>Checkbox</type>
</CustomField>