force-app/main/default/objects/TriggerSettings__c/fields/OrderTrigger__c.field-meta.xml
<CustomField>
    <fullName>OrderTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>OrderTrigger</label>
    <type>Checkbox</type>
</CustomField>