force-app/main/default/objects/TriggerSettings__c/fields/PersonAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>PersonAccountTrigger__c</fullName>
    <defaultValue>true</defaultValue>
    <label>PersonAccountTrigger</label>
    <type>Checkbox</type>
</CustomField>