force-app/main/default/objects/TriggerSettings__c/fields/VoucherTrigger__c.field-meta.xml
<CustomField>
    <fullName>VoucherTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VoucherTrigger</label>
    <type>Checkbox</type>
</CustomField>